aks_yamlmanifests/trips.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    tier: trips
  name: trips
  namespace: api
spec:
  containers:
    - image: registrygzx5650.azurecr.io/trips:1.0
      name: trips
    volumeMounts:
      - name: vm-secrets-hacker05
        mountPath: "/mnt/secrets-store"
        readOnly: true
  volumes:
  - name: vm-secrets-hacker05
    csi:
      driver: secrets-store.csi.k8s.io
      readOnly: true
      volumeAttributes:
        secretProviderClass: "oh5kv"
