aks_yamlmanifests/tripviewer.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    tier: tripviewer
  name: tripviewer
spec:
  containers:
  - image: registrygzx5650.azurecr.io/tripinsights/tripviewer:1.0
    name: poi
