aks_yamlmanifests/user-java.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    tier: user-java
  name: user-java
spec:
  containers:
  - image: registrygzx5650.azurecr.io/user-java:1.0
    name: user-java
