aks_yamlmanifests/userprofile.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    tier: userprofile
  name: userprofile
  namespace: api
spec:
  containers:
  - image: registrygzx5650.azurecr.io/userprofile:1.0
    name: userprofile
    volumeMounts:
    - name: vm-secrets-hacker05
      mountPath: "/mnt/secrets-store"
      readOnly: true
  volumes:
  - name: vm-secrets-hacker05
    csi:
      driver: secrets-store.csi.k8s.io
      readOnly: true
      volumeAttributes:
        secretProviderClass: "oh5kv"
