aks_yamlmanifests/poi.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poi-service
  namespace: api
spec:
  type: LoadBalancer
  selector:
    tier: poi
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 80
