aks_yamlmanifests/trips.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trips-service
spec:
  type: ClusterIP
  selector:
    tier: trips
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 80
