aks_yamlmanifests/user-java.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userjava-service
spec:
  type: ClusterIP
  selector:
    tier: user-java
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 80
