aks_yamlmanifests/userprofile.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userprofile-service
spec:
  type: ClusterIP
  selector:
    tier: userprofile
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 80
